feat: finish interpreter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_executable(
 	test_jisp
 	${PROJECT_SOURCE_DIR}/tests/test_jisp.cc
-	${PROJECT_SOURCE_DIR}/src/env.cc
 	${PROJECT_SOURCE_DIR}/src/lexer.cc
 	${PROJECT_SOURCE_DIR}/src/parser.cc
 	${PROJECT_SOURCE_DIR}/src/interpreter.cc
+	${PROJECT_SOURCE_DIR}/src/builtin.cc
 )
 
 target_include_directories(
