--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,9 +3,8 @@ add_executable(
 	${PROJECT_SOURCE_DIR}/tests/test_jisp.cc
 	${PROJECT_SOURCE_DIR}/src/lexer.cc
 	${PROJECT_SOURCE_DIR}/src/parser.cc
-	${PROJECT_SOURCE_DIR}/src/ast_visitor.cc
+	${PROJECT_SOURCE_DIR}/src/visitor.cc
 	${PROJECT_SOURCE_DIR}/src/builtin.cc
-	${PROJECT_SOURCE_DIR}/src/value.cc
 )
 
 target_include_directories(
